still so much to fix :(

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="blogInfo">
                             <div class="font-size-20">13 of My Favorite
                                 UI/UX Goodies</div>
-                            <div class="font-size-16">By Danny Sapio</div>
+                            <div class="font-size-16 blue-text"><span class="gray-text">By</span> Danny Sapio</div>
                         </div>
                     </article>
                     <article class="blogs">
@@ -88,7 +88,7 @@
                         <div class="blogInfo">
                             <div class="font-size-20">UI cheat sheet: 
                                 list vs grids</div>
-                            <div class="font-size-16">By Tess Gadd</div>
+                            <div class="font-size-16 blue-text"><span class="gray-text">By</span> Tess Gadd</div>
                         </div>
                     </article>
                     <article class="blogs">
@@ -97,7 +97,7 @@
                         <div class="blogInfo">
                             <div class="font-size-20">7 typography tips 
                                 for interface design</div>
-                            <div class="font-size-16">By Jeremiah Lam</div>
+                            <div class="font-size-16 blue-text"><span class="gray-text">By</span> Jeremiah Lam</div>
                         </div>
                     </article>
                     <article class="blogs">
@@ -106,16 +106,16 @@
                         <div class="bloginfo">
                             <div class="font-size-20">Your logo is 
                                 copied</div>
-                            <div class="font-size-16">By Ferdinand Vogler</div>
+                            <div class="font-size-16 blue-text"><span class="gray-text">By</span> Ferdinand Vogler</div>
                         </div>
                     </article>
                 </div>
             </div>
         </section>
 
-        <section>
-            <span id="courseHeader" class="font-size-24 blue-text"> Latest Course</span>
-            <div class="coursesContainer">
+        <section id="courseSection">
+                <span id="courseHeader" class="font-size-24 blue-text"> Latest Course</span>
+                <div class="coursesContainer">
                 <div class="courses">
                     <img src="images/courses/course-1.png" alt="" srcset="">
                     <span class="font-size-20">React - The Complete Guide</span>
